fix button spacing

--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -422,11 +422,11 @@
 }
 
 .left-icon-space {
-  margin-right: $mp-2;
+  margin-right: $mp-4;
 }
 
 .right-icon-space {
-  margin-left: $mp-2;
+  margin-left: $mp-4;
 }
 
 .floating-label-container {
